# azure-sdk-for-cpp-demo

./: .devcontainer.json  CMakeLists.txt  Dockerfile  rebuild.sh  sample.cpp
